--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -90,6 +90,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-11-18">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-11-18-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-11-18-node-share.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">11月18日更新18.3M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了加拿大、韩国、美国、日本、欧洲、香港、新加坡等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                11月18日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-11-17">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -243,23 +260,6 @@
                                 11月9日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-11-08">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-11-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/1858f1fbda8b7e0681ab8c087dbb22a2.webp" alt="11月8日更新21.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-11-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">11月8日更新21.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了新加坡、欧洲、加拿大、韩国、香港、美国、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                11月8日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li class="disabled"><span>...</span></li><li><a href="/free-nodes/page-27.htm">27</a></li><li><a href="/free-nodes/page-28.htm">28</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            </div>
@@ -269,8 +269,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-25-clash-v2ray-ss-ssr.htm">9月25日更新20.6M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、日本、欧洲、香港、美国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-8-13-node-share-links.htm">8月13日更新19M/S，2024年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、香港、美国、新加坡、韩国、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -279,8 +279,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-26-free-node-subscribe.htm">6月26日更新21.9M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、韩国、美国、香港、新加坡、加拿大等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-4-29-node-share.htm">4月29日更新22.5M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、欧洲、香港、日本等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -289,8 +289,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-1-free-v2ray-subscribe.htm">11月1日更新20.7M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、新加坡、韩国、加拿大、香港、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-6-18-shadowrocket-node.htm">6月18日更新18.5M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、韩国、加拿大、欧洲、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -299,8 +299,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-6-20-clash-windows.htm">6月20日更新22.2M/S，2024年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、欧洲、加拿大、美国、香港、日本等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-5-7-clash-node-daily-updates.htm">5月7日更新21.4M/S，2024年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、美国、韩国、香港、欧洲、新加坡等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -309,8 +309,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-10-clash-windows.htm">10月10日更新21.7M/S，2024年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、新加坡、日本、香港、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-19-free-node-subscribe-links.htm">2月19日20M/S|Shadowrocket/SSR/V2ray/Clash免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、新加坡、日本、香港、欧洲、加拿大等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -319,8 +319,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-7-16-free-node-subscribe-links.htm">7月16日更新19.8M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、香港、新加坡、美国、欧洲、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-15-clash-windows.htm">11月15日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、美国、欧洲、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -329,8 +329,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-2-free-subscribe-node.htm">11月2日更新18.7M/S，2024年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了日本、加拿大、香港、新加坡、欧洲、美国、韩国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-31-free-shadowrocket-node.htm">10月31日更新21.9M/S，2024年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、加拿大、日本、韩国、美国、新加坡等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -339,8 +339,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-9-19-free-high-speed-nodes.htm">9月19日更新22M/S，2024年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、日本、新加坡、香港等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-2-27-free-clash.htm">2月27日22.7M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、韩国、美国、新加坡、香港、欧洲等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -349,8 +349,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-14-free-node-subscribe-links.htm">10月14日更新18.2M/S，2024年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、韩国、香港、欧洲、美国、加拿大、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-10-13-free-clash.htm">10月13日更新18.1M/S，2024年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、日本、欧洲、新加坡、香港、韩国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -359,8 +359,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-3-3-clash-node.htm">3月3日19.2M/S|Clash/SSR/Shadowrocket/V2ray免费节点每天更新订阅链接</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、新加坡、欧洲、加拿大、韩国、美国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-7-22-clash-v2ray-ss-ssr.htm">7月22日更新19.4M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、欧洲、香港、韩国、新加坡、美国、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -371,7 +371,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
                                 <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
